--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,6 +1,5 @@
-
 .Header {
-    background-color: #4472c4;
+    background-color: var(--color-primary);
     color: white;
 
     position: relative;
