--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,37 +1,65 @@
+$logoSize: 3rem;
+
 .Header {
     background-color: var(--color-primary);
     color: white;
 
+    position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    padding: 1rem 2rem;
+}
+
+.Header-content-wrapper {
+    width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     justify-content: center;
-    padding: 1rem 2rem;
 }
 
 .logo {
-    width: 5rem;
+    width: $logoSize;
 }
 
 .navbar__toggle {
-    font-size: 3rem !important;
+    font-size: 2.5rem !important;
     position: absolute;
-    top: 3.5rem;
-    right: 2rem;
+    top: $logoSize / 2;
+    right: 0;
     transform: translateY(-50%);
     cursor: pointer;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
+    $logoSize: 4rem;
+
     .Header {
         flex-direction: row;
         justify-content: flex-start;
         align-items: center;
+    }
+
+    .Header-content-wrapper {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
         gap: 0;
+    }
+
+    .logo {
+        width: $logoSize;
     }
 
     .navbar__toggle {
         display: none !important;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    .Header {
+        padding: 1rem 20%;
     }
 }
