--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,10 +1,28 @@
 .Nav {
     flex: 1;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     gap: 2rem;
+}
+
+@mixin dropdown($bg-color: white, $border: 3px solid var(--color-primary)) {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+
+    background-color: $bg-color;
+    border: $border;
+
+    flex-direction: column;
 }
 
 .navbar {
@@ -19,7 +37,7 @@
         position: relative;
         color: white;
         font-size: 1.4rem;
-        font-weight: bold;
+        //font-weight: bold;
         text-align: center;
         user-select: none;
 
@@ -95,7 +113,7 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
     .Nav {
         flex: 1;
         justify-content: flex-end;
@@ -117,22 +135,4 @@
         left: 100%;
         transform: translateX(-100%);
     }
-}
-
-@mixin dropdown($bg-color: white, $border: 3px solid var(--color-primary)) {
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
-
-    margin: 0;
-    padding: 0;
-
-    list-style: none;
-
-    background-color: $bg-color;
-    border: $border;
-
-    flex-direction: column;
 }
