--- a/src/shared/styles/Header.scss
+++ b/src/shared/styles/Header.scss
@@ -9,6 +9,7 @@ $logoSize: 3rem;
     display: flex;
     justify-content: center;
     padding: 1rem 2rem;
+    z-index: 100;
 }
 
 .Header-content-wrapper {
